# korbi

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  start.sh
docs_data/: config.md  examples.md  mcp.md  realtime_guide.md  realtime_quickstart.md  ref_extensions_experimental_codex_codex.md  ref_voice_models_openai_provider.md  ref_voice_models_openai_tts.md  voice_quickstart.md
fastapi_backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  start.sh
fastapi_backend/app/: main.py
fastapi_backend/app/chat/: router.py  schemas.py  service.py  tools.py
fastapi_backend/app/core/: config.py  deps.py  exceptions.py  security.py
fastapi_backend/app/docs/: router.py  schemas.py  service.py
fastapi_backend/app/embeddings/: service.py  store.py
fastapi_backend/tests/: conftest.py  test_ai_quality.py  test_api.py  test_tools.py
nextjs-frontend/: package.json  pnpm-lock.yaml
nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/components/: Editor.tsx  Home.tsx  ReviewPanel.tsx  Sidebar.tsx
nextjs-frontend/components/QueryBar/: AssistantMessage.tsx  QueryBar.tsx  ToolActivity.tsx  index.ts
nextjs-frontend/hooks/: useAutoScroll.ts  useChat.ts  usePlaceholderAnimation.ts
nextjs-frontend/lib/: api.ts  stream.ts
nextjs-frontend/types/: chat.ts
